syntax = "proto2";

package proto_gen;

import "ChatMessageTmp.proto";
import "WordFreq.proto";

message WordAndPos {
    required string word = 1;
    required PartOfSpeech pos = 2;
}

// 每个聊天消息只有一个句子，这个句子被分词后会重新组装成一个SplittedMessage，其中wordAndPosList表示句子分词得到的词语和词性信息切片
message SplittedMessage {
    repeated WordAndPos wordAndPosList = 1;
    required int64 time = 2;
    required string chatPerson = 3;
    required string message = 4;
}

message SplittedMessageList {
    repeated SplittedMessage splittedMessages = 1;
}

service WordSplitService {
    rpc GetSplittedMessage(ChatMessageList) returns (SplittedMessageList) {}
}
